# gonova-tts

./: .gitignore  API.md  ARCHITECTURE.md  BENCHMARK.md  DEPLOYMENT.md  HARDWARE_OPTIMIZATION.md  INTEGRATION.md  LOAD_BALANCING.md  PRODUCTION.md  QUICKSTART.md  README.md  STATUS.md  VPS_SETUP.md  pyproject.toml  setup_voice_and_vad.py  setup_voices.py  test_tts.py
config/: nginx-cloudflare.conf  nginx-production.conf  nginx.conf
scripts/: benchmark_all.sh  benchmark_asr.sh  benchmark_chatterbox_direct.py  benchmark_tts.sh  check_network.sh  check_nginx.sh  clone_voice.py  debug_tts.sh  install_vllm.sh  setup_ssl.sh  start_all.sh  start_asr.sh  start_asr_cluster.sh  start_parallel_tts.sh  start_streaming_tts.sh  start_tts.sh  start_tts_cluster.sh  start_tts_single.sh  start_with_logs.sh  stop_all.sh  stop_asr_cluster.sh  stop_tts_cluster.sh  test_tts_realtime.py
services/asr/: README.md  config.yaml  server.py
services/asr/core/: __init__.py  audio_processor.py  queue_manager.py  transcriber.py  vad.py  vad_improved.py
services/tts/: README.md  config.yaml  run_parallel_server.py  run_server.py  run_streaming_server.py  server.py
services/tts/core/: __init__.py  parallel_synthesizer.py  queue_manager.py  streaming_synthesizer.py  synthesizer.py  voice_manager.py
t3-model/: config.json  tokenizer.json
